--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1 class="text-center text-center mb-4 mt-3">Consultando CEP</h1>
+    <h1 class="text-center m-3">Consultando CEP</h1>
     <div class="container">
         <form class="border">
             <div class="form-group">
